--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "private": true,
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "build": "babel ./src -d lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,10 +19,12 @@
   },
   "homepage": "https://github.com/goominc/goommerce-redux#readme",
   "devDependencies": {
+    "babel": "^5.8.35",
     "lodash": "^4.6.1",
     "redux": "^3.3.1"
   },
   "dependencies": {
+    "goommerce-api-client": "goominc/goommerce-api-client",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
   }
