--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "babel": "^5.8.35",
     "goommerce-api-client": "goominc/goommerce-api-client",
     "lodash": "^4.6.1",
-    "redux": "^3.3.1",
-    "redux-logger": "^2.6.1"
+    "redux": "^3.3.1"
   },
   "dependencies": {
+    "redux-logger": "^2.6.1",
     "redux-thunk": "^2.0.1"
   }
 }
